--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -17,11 +17,21 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp"
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/vp"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1" />-->
+
+    <ListView
+        android:id="@+id/nfc_usage_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="622dp"/>
+    <!--<android.support.v7.widget.RecyclerView-->
+        <!--android:id="@+id/nfc_usage_list"-->
+        <!--android:scrollbars="vertical"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="622dp"/>-->
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationView"
