change to androidx and add sth

--- a/app/src/main/res/layout/zxing.xml
+++ b/app/src/main/res/layout/zxing.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="center_horizontal"
         android:onClick="switchFlashlight"/>
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
