--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context="com.example.a13162.activitytest.MainActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
@@ -17,27 +17,25 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
-    <!--<android.support.v4.view.ViewPager-->
-        <!--android:id="@+id/vp"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="0dp"-->
-        <!--android:layout_weight="1" />-->
-
-    <ListView
-        android:id="@+id/nfc_usage_list"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/vp"
         android:layout_width="match_parent"
-        android:layout_height="622dp"/>
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+
     <!--<android.support.v7.widget.RecyclerView-->
         <!--android:id="@+id/nfc_usage_list"-->
         <!--android:scrollbars="vertical"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="622dp"/>-->
 
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
+        app:labelVisibilityMode="labeled"
         android:background="?android:attr/windowBackground"
         app:itemBackground="@null"
         app:itemIconTint="@drawable/bottom_navigation_selector"
